// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indexing indexRepo updates indexes when records change. 1`] = `
Array [
  Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
      "feedgens": 0,
      "labeler": false,
      "lists": 0,
      "starterPacks": 0,
    },
    "description": "freshening things up",
    "did": "user(0)",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "postsCount": 5,
    "viewer": Object {
      "blockedBy": false,
      "knownFollowers": Object {
        "count": 1,
        "followers": Array [
          Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(1)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "followedBy": "record(1)",
              "following": "record(0)",
              "muted": false,
            },
          },
        ],
      },
      "muted": false,
    },
  },
  Object {
    "cursor": "0000000000000__bafycid",
    "feed": Array [
      Object {
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(1)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "text": "fresh post!",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(2)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(2)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(4)",
                "uri": "record(5)",
              },
              "root": Object {
                "cid": "cids(3)",
                "uri": "record(4)",
              },
            },
            "text": "thanks bob",
          },
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(3)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "reply": Object {
          "grandparentAuthor": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "parent": Object {
            "$type": "app.bsky.feed.defs#postView",
            "author": Object {
              "associated": Object {
                "activitySubscription": Object {
                  "allowSubscriptions": "followers",
                },
              },
              "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "did": "user(1)",
              "displayName": "bobby",
              "handle": "bob.test",
              "labels": Array [],
              "viewer": Object {
                "blockedBy": false,
                "followedBy": "record(1)",
                "following": "record(0)",
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(4)",
            "embed": Object {
              "$type": "app.bsky.embed.images#view",
              "images": Array [
                Object {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(2)/cids(5)@jpeg",
                  "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(2)/cids(5)@jpeg",
                },
              ],
            },
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [
              Object {
                "cid": "cids(4)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "did:example:labeler",
                "uri": "record(5)",
                "val": "test-label",
              },
              Object {
                "cid": "cids(4)",
                "cts": "1970-01-01T00:00:00.000Z",
                "src": "did:example:labeler",
                "uri": "record(5)",
                "val": "test-label-2",
              },
            ],
            "likeCount": 0,
            "quoteCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000Z",
              "embed": Object {
                "$type": "app.bsky.embed.images",
                "images": Array [
                  Object {
                    "alt": "../dev-env/assets/key-landscape-small.jpg",
                    "image": Object {
                      "$type": "blob",
                      "mimeType": "image/jpeg",
                      "ref": Object {
                        "$link": "cids(5)",
                      },
                      "size": 4114,
                    },
                  },
                ],
              },
              "reply": Object {
                "parent": Object {
                  "cid": "cids(3)",
                  "uri": "record(4)",
                },
                "root": Object {
                  "cid": "cids(3)",
                  "uri": "record(4)",
                },
              },
              "text": "hear that label_me label_me_2",
            },
            "replyCount": 1,
            "repostCount": 0,
            "uri": "record(5)",
            "viewer": Object {
              "bookmarked": false,
              "embeddingDisabled": false,
              "threadMuted": false,
            },
          },
          "root": Object {
            "$type": "app.bsky.feed.defs#postView",
            "author": Object {
              "associated": Object {
                "activitySubscription": Object {
                  "allowSubscriptions": "followers",
                },
              },
              "did": "user(0)",
              "handle": "alice.test",
              "labels": Array [],
              "viewer": Object {
                "blockedBy": false,
                "muted": false,
              },
            },
            "bookmarkCount": 0,
            "cid": "cids(3)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "likeCount": 3,
            "quoteCount": 0,
            "record": Object {
              "$type": "app.bsky.feed.post",
              "createdAt": "1970-01-01T00:00:00.000000Z",
              "text": "again",
            },
            "replyCount": 2,
            "repostCount": 1,
            "uri": "record(4)",
            "viewer": Object {
              "bookmarked": false,
              "embeddingDisabled": false,
              "threadMuted": false,
            },
          },
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(6)",
          "embed": Object {
            "$type": "app.bsky.embed.record#view",
            "record": Object {
              "$type": "app.bsky.embed.record#viewRecord",
              "author": Object {
                "associated": Object {
                  "activitySubscription": Object {
                    "allowSubscriptions": "followers",
                  },
                  "chat": Object {
                    "allowIncoming": "none",
                  },
                },
                "did": "user(3)",
                "handle": "dan.test",
                "labels": Array [],
                "viewer": Object {
                  "blockedBy": false,
                  "following": "record(8)",
                  "muted": false,
                },
              },
              "cid": "cids(7)",
              "embeds": Array [
                Object {
                  "$type": "app.bsky.embed.record#view",
                  "record": Object {
                    "$type": "app.bsky.embed.record#viewRecord",
                    "author": Object {
                      "associated": Object {
                        "activitySubscription": Object {
                          "allowSubscriptions": "followers",
                        },
                      },
                      "did": "user(4)",
                      "handle": "carol.test",
                      "labels": Array [],
                      "viewer": Object {
                        "blockedBy": false,
                        "followedBy": "record(10)",
                        "muted": false,
                      },
                    },
                    "cid": "cids(8)",
                    "indexedAt": "1970-01-01T00:00:00.000Z",
                    "labels": Array [],
                    "likeCount": 2,
                    "quoteCount": 1,
                    "replyCount": 0,
                    "repostCount": 0,
                    "uri": "record(9)",
                    "value": Object {
                      "$type": "app.bsky.feed.post",
                      "createdAt": "1970-01-01T00:00:00.000Z",
                      "embed": Object {
                        "$type": "app.bsky.embed.recordWithMedia",
                        "media": Object {
                          "$type": "app.bsky.embed.images",
                          "images": Array [
                            Object {
                              "alt": "../dev-env/assets/key-landscape-small.jpg",
                              "image": Object {
                                "$type": "blob",
                                "mimeType": "image/jpeg",
                                "ref": Object {
                                  "$link": "cids(5)",
                                },
                                "size": 4114,
                              },
                            },
                            Object {
                              "alt": "../dev-env/assets/key-alt.jpg",
                              "image": Object {
                                "$type": "blob",
                                "mimeType": "image/jpeg",
                                "ref": Object {
                                  "$link": "cids(9)",
                                },
                                "size": 12736,
                              },
                            },
                          ],
                        },
                        "record": Object {
                          "record": Object {
                            "cid": "cids(10)",
                            "uri": "record(11)",
                          },
                        },
                      },
                      "text": "hi im carol",
                    },
                  },
                },
              ],
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": Array [],
              "likeCount": 0,
              "quoteCount": 1,
              "replyCount": 0,
              "repostCount": 1,
              "uri": "record(7)",
              "value": Object {
                "$type": "app.bsky.feed.post",
                "createdAt": "1970-01-01T00:00:00.000Z",
                "embed": Object {
                  "$type": "app.bsky.embed.record",
                  "record": Object {
                    "cid": "cids(8)",
                    "uri": "record(9)",
                  },
                },
                "facets": Array [
                  Object {
                    "features": Array [
                      Object {
                        "$type": "app.bsky.richtext.facet#mention",
                        "did": "user(0)",
                      },
                    ],
                    "index": Object {
                      "byteEnd": 18,
                      "byteStart": 0,
                    },
                  },
                ],
                "text": "@alice.bluesky.xyz is the best",
              },
            },
          },
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(6)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(6)",
              "val": "test-label",
            },
          ],
          "likeCount": 2,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.record",
              "record": Object {
                "cid": "cids(7)",
                "uri": "record(7)",
              },
            },
            "text": "yoohoo label_me",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(6)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(3)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 3,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000000Z",
            "text": "again",
          },
          "replyCount": 2,
          "repostCount": 1,
          "uri": "record(4)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
      Object {
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(0)",
            "handle": "alice.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(11)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(11)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "user(0)",
              "uri": "record(12)",
              "val": "self-label",
            },
          ],
          "likeCount": 0,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "labels": Object {
              "$type": "com.atproto.label.defs#selfLabels",
              "values": Array [
                Object {
                  "val": "self-label",
                },
              ],
            },
            "text": "hey there",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(12)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
      },
    ],
  },
  Object {
    "cursor": "0000000000000__bafycid",
    "follows": Array [
      Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
          "chat": Object {
            "allowIncoming": "none",
          },
        },
        "did": "user(3)",
        "handle": "dan.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(8)",
          "muted": false,
        },
      },
      Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(0)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "following": "record(0)",
          "muted": false,
        },
      },
    ],
    "subject": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "description": "freshening things up",
      "did": "user(0)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "blockedBy": false,
        "muted": false,
      },
    },
  },
]
`;

exports[`indexing indexes posts. 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": Object {
              "byteEnd": 9,
              "byteStart": 0,
            },
          },
        ],
        "text": "@bob.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": Array [],
    "threadContext": Object {},
  },
}
`;

exports[`indexing indexes posts. 2`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "facets": Array [
          Object {
            "features": Array [
              Object {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(2)",
              },
            ],
            "index": Object {
              "byteEnd": 11,
              "byteStart": 0,
            },
          },
        ],
        "text": "@carol.test how are you?",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": Array [],
    "threadContext": Object {},
  },
}
`;

exports[`indexing indexes posts. 3`] = `
Object {
  "createNotifications": Array [
    Object {
      "author": "user(1)",
      "did": "user(0)",
      "id": 0,
      "reason": "mention",
      "reasonSubject": null,
      "recordCid": "cids(0)",
      "recordUri": "record(0)",
      "sortAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "deleteNotifications": Array [],
  "updateNotifications": Array [
    Object {
      "author": "user(1)",
      "did": "user(2)",
      "id": 0,
      "reason": "mention",
      "reasonSubject": null,
      "recordCid": "cids(1)",
      "recordUri": "record(0)",
      "sortAt": "1970-01-01T00:00:00.000Z",
    },
  ],
}
`;

exports[`indexing indexes profiles. 1`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "chat": Object {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "displayName": "dan",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing indexes profiles. 2`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "chat": Object {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "displayName": "danny",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;

exports[`indexing indexes profiles. 3`] = `
Object {
  "associated": Object {
    "activitySubscription": Object {
      "allowSubscriptions": "followers",
    },
    "chat": Object {
      "allowIncoming": "none",
    },
    "feedgens": 0,
    "labeler": false,
    "lists": 0,
    "starterPacks": 0,
  },
  "did": "user(0)",
  "followersCount": 0,
  "followsCount": 0,
  "handle": "dan.test",
  "labels": Array [],
  "postsCount": 0,
  "viewer": Object {
    "blockedBy": false,
    "muted": false,
  },
}
`;
